--- a/src/scss/themes/ng/body.scss
+++ b/src/scss/themes/ng/body.scss
@@ -3266,6 +3266,7 @@ a[role="button"].cui-button-appearance-link {
 			align-self: flex-end;
 			max-width: none;
 			flex-shrink: 1;
+			max-width: 100%;
 		}
 	}
 
